# openmarine8d

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  MANUAL_PUBLISH.md  QUICK_DEPLOY.md  README.md  SECURITY.md  TESSERACT_INSTALL.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: publish-to-pypi.yml  test.yml
examples/: basic_usage.py  batch_processing.py
hackathon/hackathon/missing_person_finder/: INSTALL.txt  QUICKSTART.md  README.md  app.py  embedding_utils.py  requirements.txt  run_app.bat
hackathon/hackathon/missing_person_finder/data/index/: metadata.pkl
hackathon/hackathon/missing_person_finder/logs/: search_logs.csv
matocr8d/: __init__.py
tests/: __init__.py  test_core.py
